tests/NormalTests/paczka2/big_fuzzy/61397373.err
Error in line 2: F4C A800 17,3
Error in line 5: F4C A444 51,7
Error in line 7: YN41fLXvJ9f A800 93,0
Error in line 26: YAHiqoyIQUr A800 86,0
Error in line 40: 6dce A800 48,6
Error in line 50: yBi0t A444 70,5
Error in line 37: A800 S462 64,8
Error in line 49: YAHiqoyIQUr A800 69,6
Error in line 59: YN41fLXvJ9f A727 81,7
Error in line 67: YN41fLXvJ9f S462 80,2
Error in line 71: YN41fLXvJ9f A800 0,9
Error in line 70: 6dce S462 72,2
Error in line 76: A800 A727 -6,1
Error in line 78: YN41fLXvJ9f S462 37,91
Error in line 74: A800 A727 98,8
Error in line 38: tN3Faa A727 70,3
Error in line 100: A800 A800 -1,2
Error in line 105: F4C A444 9,0
Error in line 95: A800 A800 75,3
Error in line 86: YN41fLXvJ9f A444 112,0
Error in line 106: F4C S462 39,9
Error in line 109: YN41fLXvJ9f A727 96,2
Error in line 137: YN41fLXvJ9f A444 222,2
Error in line 141: A800 A727 14,0
Error in line 139: 6dce S462 37,3
Error in line 148: 6dce A727 98,2
Error in line 151: 6dce S462 63,6
Error in line 136: tN3Faa A727 84,3
Error in line 155: F4C S462 94,6
Error in line 162: F4C A444 45,0
Error in line 149: YN41fLXvJ9f A727 51,0
Error in line 171: tN3Faa A800 20,06
Error in line 169: A800 A444 26,4
Error in line 173: yBi0t A800 67,0
Error in line 166: tN3Faa S462 96,5
Error in line 187: yBi0t A727 48,2
Error in line 177: F4C S462 9,7
Error in line 190: 6dce S462 56,1
Error in line 192: 6dce A727 30,8
Error in line 200: YAHiqoyIQUr A727 40,3
Error in line 198: A800 S462 78,7
Error in line 209: 6dce A800 62,5
Error in line 208: yBi0t A444 28,2
Error in line 221: tN3Faa A444 41,2
Error in line 201: YAHiqoyIQUr A444 17,4
Error in line 223: YAHiqoyIQUr A727 9,4
Error in line 228: tN3Faa A444 47,8
Error in line 229: A800 A800 98,0
Error in line 226: yBi0t A444 37,9
